--- a/scss/new/test.scss
+++ b/scss/new/test.scss
@@ -1,13 +1,20 @@
 $font-size:62.5%;
 $font-face:"Trebuchet MS", Helvetica, sans-serif;
 $base-color:#ffff;
-$top-nav-color:#1379D3;
+$font-stack:"Segoe", "Segoe UI", Arial, "sans-serif";
+$top-nav-color: #1379D3;
 body{
-  font:$font-size $font-face;
+  font-family:$font-stack;
   color:$base-color;
   margin:auto;
+  height: 84vh;
+}
+ul{
+  margin: 0;
 }
 textarea{
+  resize:none;
+  border: none;
   width: 100%;
 }
 .hidden-innerspan{
@@ -35,6 +42,7 @@ list-style: none;
  }
 
  button{
+  outline: none;
  height: 50px;
  width: 60px;
  border: none;
@@ -49,8 +57,8 @@ list-style: none;
    }
 .top-nav{
   background-color: #1379D3;
-    height: 53px;
-    width: auto;
+  height: 11%;
+  width: auto;
   .top-text{
     color: #ffff;
     padding-left: 13px;
@@ -88,25 +96,50 @@ list-style: none;
 .contents{
   width: 100%;
   display: inline-flex;
-  height: 100%;
+  height: 89%;
 
 
 .side-nav{
     width: 25%;
     background: #F4F4F4;
-    height: 100%;
+    height: 120%;
     display: inline-block;
     -webkit-transition: width 0.5s; /* For Safari 3.1 to 6.0 */
    transition: width 0.35s;
+   .fa-list-ul{
+    font-size: 20px;
+    padding-left: 20px;
+    color: darkgrey;
+    height: 50px;
+    width: 60px;
+    padding-left: 10px;
+    font-size: 20px;
+    border: none;
+    background-color: #F4F4F4;
+  }
+  .fa-plus{
+    font-size: 20px;
+    padding-left: 20px;
+    color: darkgrey;
+    height: 50px;
+    width: 60px;
+    padding-left: 10px;
+    font-size: 20px;
+    border: none;
+    background-color: #F4F4F4;
 
+  }
    a button {
+    outline: none;
+
    height: 50px;
    width: 60px;
    padding-left: 10px;
    font-size: 20px;
    border: none;
    background-color: #F4F4F4;
-}
+  
+  }
 .new{
   border:none;
   width:auto;
@@ -117,8 +150,9 @@ list-style: none;
 }
 .button-class {
 	font-size: 20px;
-  padding-left: 20px;
+  padding-left: 0px;
   color: darkgrey;
+  width:50px;
   }
   .innerspan{
 
@@ -126,13 +160,19 @@ list-style: none;
     font-size: 15px;
     display:inline;
   }
+  .innerspan-collapse{
+    color:#716262;
+  font-size: 15px;
+  display:none;
+}
   .innerspan-input{
+    width: 127px;
+    background: transparent;
   border: none;
   outline: none;
     color: grey;
     font-size: 15px;
     display: inline;
-    width: 145px;
 }
 }
 .sidenav-collapse{
@@ -143,11 +183,7 @@ list-style: none;
   -webkit-transition: width 0.5s; /* For Safari 3.1 to 6.0 */
  transition: width 0.35s;
 }
-.innerspan-collapse{
-       color:#716262;
-     font-size: 15px;
-     display:non;
-   }
+
 .list-content{
   width: 97%;
 background-color: #ffff;
@@ -157,7 +193,7 @@ height: auto;
      padding-top: 10px;
      padding-left: 20px;
      color: #1379D3;
-     font-size: 30px;
+     font-size: 25px;
      }
      .sort{
        float: right;
@@ -165,6 +201,7 @@ height: auto;
         padding-right: 20px;
         text-align: right;
           button{
+            outline: none;
           height: 50px;
           width: 44px;
           border: none;
@@ -198,6 +235,7 @@ border-bottom: 1px solid lightgrey;
       color: darkgrey;
     }
        button{
+        outline: none;
        height: 50px;
        width: 40px;
        border: none;
@@ -234,6 +272,7 @@ border-bottom: 1px solid lightgrey;
     padding: 20px 10px;
     border-bottom: 1px solid lightgrey;
     button{
+      outline: none;
       vertical-align: top;
         position: relative;
         bottom: 50%;
@@ -253,6 +292,7 @@ border-bottom: 1px solid lightgrey;
           background-color: lightgrey;
     color: white;
     button{
+      outline: none;
       background-color: lightgrey;
     color: white;
 
@@ -261,11 +301,14 @@ border-bottom: 1px solid lightgrey;
      }
 }
 }
+.list-content-collapse{
+  width:97%;
+}
 .side-content{
   display:none;
   background-color: #F4F4F4;
     width: 33%;
-    height: 100%;
+    height: 118%;
     padding-left: 16px;
     padding-top: 17px;
     padding-right: 8px;
@@ -280,10 +323,15 @@ border-bottom: 1px solid lightgrey;
     .content{
     display: inline-flex;
     .fa-star-o{
-        margin-left: 155px;
-  float:right;
-}
+      margin-left: 69px;
+      float:right; 
+    }
+    .fa-star{
+      margin-left: 69px;
+      float:right; 
+    }
       button{
+        outline: none;
         vertical-align: inherit;
         position: relative;
         font-size: 22px;
@@ -295,8 +343,8 @@ border-bottom: 1px solid lightgrey;
       }
       span{
         padding: 5%;
-        color:lightgrey;
-         font-size: 22px;
+        color:grey;
+         font-size: 16px;
          //text-decoration: line-through;
           }
     }
@@ -320,8 +368,8 @@ border-bottom: 1px solid lightgrey;
         color: darkgrey;
       }
       span{
-        color:lightgrey;
-         font-size: 22px;
+        color:grey;
+         font-size: 16px;
           }
           
           }
@@ -350,8 +398,8 @@ border-bottom: 1px solid lightgrey;
           display: inline-flex;
       border-bottom: 1px solid lightgrey;
     span{
-      color:lightgrey;
-       font-size: 22px;
+      color:grey;
+       font-size: 16px;
       }
 
     .dateoneOne{
@@ -360,6 +408,12 @@ border-bottom: 1px solid lightgrey;
       display: none;
       border: none;
       }
+      .dateoneOne-toggle{
+        padding-left: 30px;
+        outline: none;
+        display: block;
+        border: none;
+        }
       .datetwoTwo{
         padding-left: 30px;
         outline: none;
@@ -380,7 +434,7 @@ border-bottom: 1px solid lightgrey;
   .right-top-content-four{
     display: inherit;
       background-color: white;
-      height: 75px;
+      height: auto;
       width: 97%;
       border: 1px solid white;
       /* padding: 2px; */
@@ -389,8 +443,8 @@ border-bottom: 1px solid lightgrey;
       span{
         padding-top: 12%;
             padding: 10%;
-            color: darkgray;
-            font-size: 22px;
+            color: gray;
+            font-size: 16px;
   .note{  margin: 0px;
     width: 267px;
 height: 65px;
@@ -400,11 +454,16 @@ height: 65px;
     }
   }
 }
+.side-content-open{
+  display:block;
+}
+
 .bottom-right{
+  margin-top:21vh;
   display: inherit;
-  background-color: grey;
+  background-color: white;
     height: 67px;
-    width: 97%;
+    width: 98%;
     border: 1px solid white;
   /*right: 11px;
 position: absolute;
@@ -423,11 +482,12 @@ border: 1px solid white;*/
   float:right;
 }
       button{
+        outline: none;
         vertical-align: inherit;
   position: relative;
-  font-size: 22px;
-  color: black;
-  background: gray;
+  font-size: 18px;
+   color: darkgrey;
+    background: transparent;
      }
       .button-class {
         padding-left: 0px;
@@ -436,16 +496,10 @@ border: 1px solid white;*/
       span{
         width: auto;
         padding: 5%;
-        color:lightgrey;
-         font-size: 22px;
+        color:grey;
+         font-size: 16px;
           }
     }
   }
 }
-.dateoneOne-toggle{
-  padding-left: 30px;
-  outline: none;
-  display: none;
-  border: none;
-  }
 }
