--- a/scss/new/test1.css
+++ b/scss/new/test1.css
@@ -1,9 +1,15 @@
 body {
-  font: 62.5% "Trebuchet MS", Helvetica, sans-serif;
+  font-family: "Segoe", "Segoe UI", Arial, "sans-serif";
   color: #ffff;
-  margin: auto; }
+  margin: auto;
+  height: 84vh; }
+
+ul {
+  margin: 0; }
 
 textarea {
+  resize: none;
+  border: none;
   width: 100%; }
 
 .hidden-innerspan {
@@ -30,6 +36,7 @@ span {
   display: inline; }
 
 button {
+  outline: none;
   height: 50px;
   width: 60px;
   border: none;
@@ -44,7 +51,7 @@ button {
 
 .top-nav {
   background-color: #1379D3;
-  height: 53px;
+  height: 11%;
   width: auto; }
   .top-nav .top-text {
     color: #ffff;
@@ -80,16 +87,37 @@ button {
 .contents {
   width: 100%;
   display: inline-flex;
-  height: 100%; }
+  height: 89%; }
   .contents .side-nav {
     width: 25%;
     background: #F4F4F4;
-    height: 100%;
+    height: 120%;
     display: inline-block;
     -webkit-transition: width 0.5s;
     /* For Safari 3.1 to 6.0 */
     transition: width 0.35s; }
+    .contents .side-nav .fa-list-ul {
+      font-size: 20px;
+      padding-left: 20px;
+      color: darkgrey;
+      height: 50px;
+      width: 60px;
+      padding-left: 10px;
+      font-size: 20px;
+      border: none;
+      background-color: #F4F4F4; }
+    .contents .side-nav .fa-plus {
+      font-size: 20px;
+      padding-left: 20px;
+      color: darkgrey;
+      height: 50px;
+      width: 60px;
+      padding-left: 10px;
+      font-size: 20px;
+      border: none;
+      background-color: #F4F4F4; }
     .contents .side-nav a button {
+      outline: none;
       height: 50px;
       width: 60px;
       padding-left: 10px;
@@ -103,19 +131,25 @@ button {
       background-color: #1379D3; }
     .contents .side-nav .button-class {
       font-size: 20px;
-      padding-left: 20px;
-      color: darkgrey; }
+      padding-left: 0px;
+      color: darkgrey;
+      width: 50px; }
     .contents .side-nav .innerspan {
       color: #716262;
       font-size: 15px;
       display: inline; }
+    .contents .side-nav .innerspan-collapse {
+      color: #716262;
+      font-size: 15px;
+      display: none; }
     .contents .side-nav .innerspan-input {
+      width: 127px;
+      background: transparent;
       border: none;
       outline: none;
       color: grey;
       font-size: 15px;
-      display: inline;
-      width: 145px; }
+      display: inline; }
   .contents .sidenav-collapse {
     width: 6%;
     background: #F4F4F4;
@@ -124,10 +158,6 @@ button {
     -webkit-transition: width 0.5s;
     /* For Safari 3.1 to 6.0 */
     transition: width 0.35s; }
-  .contents .innerspan-collapse {
-    color: #716262;
-    font-size: 15px;
-    display: non; }
   .contents .list-content {
     width: 97%;
     background-color: #ffff;
@@ -137,13 +167,14 @@ button {
       padding-top: 10px;
       padding-left: 20px;
       color: #1379D3;
-      font-size: 30px; }
+      font-size: 25px; }
     .contents .list-content .sort {
       float: right;
       padding-top: 10px;
       padding-right: 20px;
       text-align: right; }
       .contents .list-content .sort button {
+        outline: none;
         height: 50px;
         width: 44px;
         border: none;
@@ -174,6 +205,7 @@ button {
           font-size: 20px;
           color: darkgrey; }
         .contents .list-content .list-inner-content .add-task button {
+          outline: none;
           height: 50px;
           width: 40px;
           border: none;
@@ -202,6 +234,7 @@ button {
           padding: 20px 10px;
           border-bottom: 1px solid lightgrey; }
           .contents .list-content .list-inner-content ul li button {
+            outline: none;
             vertical-align: top;
             position: relative;
             bottom: 50%;
@@ -216,13 +249,16 @@ button {
           background-color: lightgrey;
           color: white; }
           .contents .list-content .list-inner-content ul .item:hover button {
+            outline: none;
             background-color: lightgrey;
             color: white; }
+  .contents .list-content-collapse {
+    width: 97%; }
   .contents .side-content {
     display: none;
     background-color: #F4F4F4;
     width: 33%;
-    height: 100%;
+    height: 118%;
     padding-left: 16px;
     padding-top: 17px;
     padding-right: 8px;
@@ -238,9 +274,13 @@ button {
       .contents .side-content .right-top-content-one .content {
         display: inline-flex; }
         .contents .side-content .right-top-content-one .content .fa-star-o {
-          margin-left: 155px;
+          margin-left: 69px;
+          float: right; }
+        .contents .side-content .right-top-content-one .content .fa-star {
+          margin-left: 69px;
           float: right; }
         .contents .side-content .right-top-content-one .content button {
+          outline: none;
           vertical-align: inherit;
           position: relative;
           font-size: 22px;
@@ -250,8 +290,8 @@ button {
           color: #1379D3; }
         .contents .side-content .right-top-content-one .content span {
           padding: 5%;
-          color: lightgrey;
-          font-size: 22px; }
+          color: grey;
+          font-size: 16px; }
     .contents .side-content .right-top-content-two {
       display: inherit;
       background-color: white;
@@ -268,8 +308,8 @@ button {
           padding-left: 0px;
           color: darkgrey; }
         .contents .side-content .right-top-content-two .content-2 span {
-          color: lightgrey;
-          font-size: 22px; }
+          color: grey;
+          font-size: 16px; }
     .contents .side-content .right-top-content-three {
       display: inherit;
       background-color: white;
@@ -291,12 +331,17 @@ button {
           display: inline-flex;
           border-bottom: 1px solid lightgrey; }
           .contents .side-content .right-top-content-three .content-3 .inner-div-2 span {
-            color: lightgrey;
-            font-size: 22px; }
+            color: grey;
+            font-size: 16px; }
           .contents .side-content .right-top-content-three .content-3 .inner-div-2 .dateoneOne {
             padding-left: 30px;
             outline: none;
             display: none;
+            border: none; }
+          .contents .side-content .right-top-content-three .content-3 .inner-div-2 .dateoneOne-toggle {
+            padding-left: 30px;
+            outline: none;
+            display: block;
             border: none; }
           .contents .side-content .right-top-content-three .content-3 .inner-div-2 .datetwoTwo {
             padding-left: 30px;
@@ -311,7 +356,7 @@ button {
     .contents .side-content .right-top-content-four {
       display: inherit;
       background-color: white;
-      height: 75px;
+      height: auto;
       width: 97%;
       border: 1px solid white;
       /* padding: 2px; */ }
@@ -320,17 +365,20 @@ button {
         .contents .side-content .right-top-content-four .content-4 span {
           padding-top: 12%;
           padding: 10%;
-          color: darkgray;
-          font-size: 22px; }
+          color: gray;
+          font-size: 16px; }
           .contents .side-content .right-top-content-four .content-4 span .note {
             margin: 0px;
             width: 267px;
             height: 65px; }
+  .contents .side-content-open {
+    display: block; }
   .contents .bottom-right {
+    margin-top: 21vh;
     display: inherit;
-    background-color: grey;
+    background-color: white;
     height: 67px;
-    width: 97%;
+    width: 98%;
     border: 1px solid white;
     /*right: 11px;
 position: absolute;
@@ -346,21 +394,17 @@ border: 1px solid white;*/ }
         margin-left: 30px;
         float: right; }
       .contents .bottom-right .left-bottom-content-one .content button {
+        outline: none;
         vertical-align: inherit;
         position: relative;
-        font-size: 22px;
-        color: black;
-        background: gray; }
+        font-size: 18px;
+        color: darkgrey;
+        background: transparent; }
       .contents .bottom-right .left-bottom-content-one .content .button-class {
         padding-left: 0px;
         color: #1379D3; }
       .contents .bottom-right .left-bottom-content-one .content span {
         width: auto;
         padding: 5%;
-        color: lightgrey;
-        font-size: 22px; }
-  .contents .dateoneOne-toggle {
-    padding-left: 30px;
-    outline: none;
-    display: none;
-    border: none; }
+        color: grey;
+        font-size: 16px; }
